# HackaProfile

./: .cache_ggshield  .gitignore  README.md  TODO.md  agent.py  backend.py  frontend.py  hackatimeOA.py  main.py  pyproject.toml  requirements.txt  slackOA.py
config/: slack.hackaprofile.conf
configTemplate/: hackatime.hackaprofile.conf  slack.hackaprofile.conf
src/: __init__.py  agent.py  backend.py  frontend.py  hackatimeOA.py  index.html?client_id=WAlWRi9-IfFv2F88Iv6O75iZD7MoSVpCQtwrCj8xvrY&redirect_uri=https:%2  slackOA.py
src/configTemplate/: hackaprofile.conf  hackatime.hackaprofile.conf  slack.hackaprofile.conf
test/: test.py
