[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HackaProfile"
version = "1.2.0"
description = "A simple tool to automatically update Slack user profile based on their Hackatime/Wakatime heartbeat!"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-doc==0.0.4",
    "blinker==1.9.0",
    "certifi==2026.6.17",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "dotenv==0.9.9",
    "Flask==3.1.3",
    "idna==3.18",
    "itsdangerous==2.2.0",
    "jaraco.classes==3.4.0",
    "jaraco.context==6.1.2",
    "jaraco.functools==4.5.0",
    "Jinja2==3.1.6",
    "keyring==25.7.0",
    "markdown-it-py==4.2.0",
    "MarkupSafe==3.0.3",
    "mdurl==0.1.2",
    "more-itertools==11.1.0",
    "prompt_toolkit==3.0.52",
    "psutil==7.2.2",
    "Pygments==2.20.0",
    "pyperclip==1.11.0",
    "python-dotenv==1.2.2",
    "questionary==2.1.1",
    "requests==2.34.2",
    "rich==15.0.0",
    "shellingham==1.5.4",
    "typer==0.26.7",
    "urllib3==2.7.0",
    "wcwidth==0.8.1",
    "Werkzeug==3.1.8",
    "platformdirs==4.10.0",
    "Jinja2==3.1.6",

]
[project.urls]
Repository = "https://github.com/zibuyin/HackaProfile"
Issues = "https://github.com/zibuyin/HackaProfile/issues"
Homepage = "https://github.com/zibuyin/HackaProfile"
[project.scripts]
hackaprofile = "src.frontend:app"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["configTemplate/*", "logTemplate/*"]